# pytest-collect-formatter2

./: Makefile  README.rst  a.json  requirements_dev.txt  setup.cfg  setup.py  tox.ini
examples/result/: result.json
pytest_collect_formatter2/: plugin.py
