[bumpversion]
current_version = 0.1.2
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:src/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
test = pytest

[metadata]
# replace with your username:
name = lingo
version = {current_version}
author = lingo
author_email = likanglin@bytedance.com
description = collector
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/15klli/pytest-collect-formatter2
project_urls =
    Bug Tracker = https://github.com/15klli/pytest-collect-formatter2
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
